# multi_agent_framework

./: .gitignore  NOTICE  README.md  agent.py  analytics.ipynb  analytics.py  banner.txt  communicator.py  controller.py  core.py  docker-compose.yml  environment.py  install.py  log_handler.py  logger.py  main.py  persistence.py  pyproject.toml  requirements.txt  setup.sh  train.ipynb  ubuntu_dependencies.sh  utils.py
config/: default.json  default_vu.json  vu_lab_4_drones_1m2.json  vu_lab_4_drones_box_limit.json  vu_lab_one_drone_keyboard_2d.json
docs/: index.html  light_house_v1.yaml
docs/drawio/V0/: V0.drawio
docs/drawio/V10/: V10.drawio
docs/drawio/V11/: V11.drawio
docs/drawio/V12/: V12.drawio
docs/drawio/V2/: V2.drawio
docs/drawio/V3/: V3.drawio
docs/drawio/V4/: V4.drawio
docs/drawio/V7/: V7.drawio
docs/drawio/V8/: V8.drawio
docs/drawio/V9/: V9.drawio
docs/pages/: circle_around_center.html  circle_spin.html
docs/vu/: lighthouse_vu.yaml
drawio/V1/: V5.drawio
drawio/V5/: V5.drawio
drawio/V6/: V6.drawio
maf/: agent.py  app.py  communicator.py  controller.py  core.py  environment.py  field_modulation.py  log_handler.py  logger_config.py  logging.json  model.py  persistence.py  utils.py
maf/config/: circle_around_center.json  circle_around_center_vu.json  circle_spin.json  circle_spin_vu.json  default.json  default_vu.json  hello_world.json  hill_climbing_1.json  hill_climbing_square.json  hill_climbing_square_vu.json  one_drone_2d_keyboard_vu.json  spin.json
python-client/: pyproject.toml
