[tool.poetry]
name = "python-client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cflib = "^0.1.25.1"
pygame = "^2.5.2"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
torch = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
