[tool.poetry]
package-mode = false
name = "multi-agent-framework"
version = "1.0.0"
description = ""
authors = ["Alexandru Dochian <alexandru.dochian@forktex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cflib = "^0.1.25.1"
pygame = "^2.5.2"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
torch = "^2.2.2"
mayavi = "^4.8.1"
redis = "^5.0.7"
pydantic = "^2.8.2"
ipykernel = "^6.29.5"
configobj = "^5.0.8"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
